test/types/range/lydia/badRange-string-upper.chpl
proc main() {
  for param i in 0.."" {
    writeln(i);
  }
}
